# SmallHarness

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  Quickstart.md  README.md  package-lock.json  package.json  tsconfig.json
.cursor/rules/: plan-ship-gate.mdc
.github/: FUNDING.yml
.github/workflows/: ci.yml  release.yml
docs/: INTEGRATION_MATRIX.md  PLAN_KICKOFF.txt  RELEASE.md
packaging/homebrew/: small-harness.rb
rust/src/: agent.rs  approval.rs  backends.rs  banner.rs  config.rs  input.rs  loader.rs  main.rs  openai.rs  renderer.rs
src/: agent.rs  agent.ts  agent_eval.rs  agent_integration_test.rs  app_state.rs  approval.rs  approval.ts  auth.rs  auto_loop.rs  backends.rs  backends.ts  banner.rs  banner.ts  budget.rs  cancel.rs  capabilities.rs  catalog.rs  cli.ts  codex_oauth.rs  codex_responses.rs  commands.rs  commands.ts  config.rs  config.ts  context_guard.rs  crash_log.rs  diff_view.rs  fable_usage.rs  fix_loop.rs  handoff.rs  hardware.rs  input-styles.ts  input.rs  iterate_loop.rs  loader.rs  loader.ts  main.rs  markdown.rs  mcp.rs  model_system.rs  (+22 more)
src/commands/: config_cmds.rs  context_cmds.rs  doctor.rs  fable.rs  hooks_cmds.rs  memory.rs  mod.rs  route.rs  scorecard.rs  session.rs  ship.rs  workflow.rs
src/hooks/: config.rs  discovery.rs  effects.rs  events.rs  mod.rs  registry.rs  runner.rs  runtime.rs  state.rs
src/tools/: apply_patch_tool.rs  define.ts  diff.rs  evaluator.rs  file-edit.ts  file-read.ts  file-write.ts  file_edit.rs  file_read.rs  file_write.rs  glob-tool.ts  glob_tool.rs  grep.rs  grep.ts  index.ts  mod.rs  (+8 more)
(+6 files in other folders)
