[package]
name = "small-harness"
version = "0.1.33"
edition = "2021"

[[bin]]
name = "small-harness"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-std", "io-util", "process", "fs", "time", "signal", "sync"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"
futures-util = "0.3"
crossterm = "0.28"
regex = "1"
globset = "0.4"
walkdir = "2"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
anyhow = "1"

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
